@@ -7,7 +7,6 @@ import java.io.DataOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.Set;
 import java.util.TreeSet;
@@ -55,13 +54,13 @@ public class TodoApp {
   }
 
   private byte[] readStoredValues() throws IOException {
-    Path path = Paths.get("todo.bin");
+    Path path = Path.of("todo.bin");
     if (!Files.isRegularFile(path))
       return null;
     return Files.readAllBytes(path);
   }
 
   private void writeValuesToStore(byte[] values) throws IOException {
-    Files.write(Paths.get("todo.bin"), values);
+    Files.write(Path.of("todo.bin"), values);
   }
 }
